@@ -1,3 +1,4 @@
+- do not read big debug media if 'ignore_debug_media' option is set
 - try harder not to have gray wait message dialogs
   (needs drakxtools > 11.67)
 - when using --env:
